# aathoos

./: .editorconfig-checker.json  .gitattributes  .gitignore  .mailmap  .markdownlint.jsonc  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
.github/: CODEOWNERS  FUNDING.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml  platform_issue.md
.github/workflows/: core.yml  docs.yml  e2e.yml  labeler.yml  repo.yml  style.yml  web.yml
assets/: README.md
core/: Cargo.toml  README.md
core/src/: ffi.rs  lib.rs
design/: README.md
docs/: README.md
docs/decisions/: README.md
linux/: README.md
macos/: .gitignore  Package.swift  README.md
macos/AathoosCoreLib/: module.modulemap
macos/AathoosCoreLib/include/: aathoos_core.h
macos/Sources/aathoos/: ContentView.swift  aathoosApp.swift
macos/Sources/aathoos/Bridge/: CoreBridge.swift
macos/Sources/aathoos/Models/: AppColors.swift  AppDatabase.swift  AppSection.swift  TaskStore.swift
macos/Sources/aathoos/Views/: GoalsView.swift  (+6 more)
scripts/: README.md  build-core-macos.sh
tests/: README.md
web/: index.html  package-lock.json  package.json  playwright.config.js
web/e2e/: landing.spec.js
web/src/: App.css  App.jsx  index.css
windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  aathoos.csproj  app.manifest
windows/Views/: DashboardPage.xaml  DashboardPage.xaml.cs  FocusModePage.xaml  FocusModePage.xaml.cs  GoalsPage.xaml  GoalsPage.xaml.cs  NotesPage.xaml  NotesPage.xaml.cs  StudyPlannerPage.xaml  StudyPlannerPage.xaml.cs  TasksPage.xaml  TasksPage.xaml.cs
